--- a/index.html
+++ b/index.html
@@ -1,115 +1,309 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Calculator</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #121212;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      color: #ffffff;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator with Snake Game and Liquid Animation</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #121212;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            color: #ffffff;
+            overflow: hidden;
+            position: relative;
+        }
 
-    .name {
-      font-family: 'Poppin', sans-sefif;;
-      font-size: 24px;
-      margin-bottom: 40px;
-      color: #00bcd4;
-    }
+        .falling-ball {
+            position: absolute;
+            top: -100px;
+            left: 50%;
+            width: 50px;
+            height: 50px;
+            background-color: #007acc;
+            border-radius: 50%;
+            transform: translateX(-50%);
+            animation: fall 2s ease-in-out forwards, splash 2s 2s ease-in-out forwards, fillScreen 4s 4s ease-in-out forwards;
+            z-index: -2;
+        }
 
-    .calculator {
-      background: rgba(50, 50, 50, 0.7);
-      backdrop-filter: blur(10px);
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-      width: 300px;
-    }
+        @keyframes fall {
+            0% {
+                top: -100px;
+            }
 
-    .calculator input[type="number"] {
-      width: calc(100% - 22px);
-      padding: 10px;
-      margin: 10px 0;
-      background-color: #333;
-      border: 1px solid #555;
-      border-radius: 5px;
-      font-size: 18px;
-      color: #ffffff;
-    }
+            100% {
+                top: 80%;
+            }
+        }
 
-    .calculator input[type="button"] {
-      width: 100%;
-      padding: 10px;
-      margin: 5px 0;
-      background-color: #00bcd4;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-size: 18px;
-      cursor: pointer;
-    }
+        @keyframes splash {
+            0% {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+            }
 
-    .calculator input[type="button"]:hover {
-      background-color: #0097a7;
-    }
+            100% {
+                width: 100%;
+                height: 300px;
+                border-radius: 50% 50% 0 0;
+                top: auto;
+                bottom: 0;
+                left: 0;
+                transform: none;
+            }
+        }
 
-    .result {
-      margin-top: 20px;
-      font-size: 20px;
-      font-weight: bold;
-      color: #ffffff;
-      text-align: center;
-    }
-  </style>
+        @keyframes fillScreen {
+            0% {
+                height: 300px;
+            }
+
+            100% {
+                height: 100%;
+            }
+        }
+
+        .name {
+            font-family: 'Poppins', sans-serif;
+            font-size: 24px;
+            margin-bottom: 20px;
+            color: #00bcd4;
+            z-index: 1;
+        }
+
+        .calculator {
+            background: rgba(50, 50, 50, 0.7);
+            backdrop-filter: blur(10px);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            width: 300px;
+            margin-bottom: 20px;
+            position: relative;
+            z-index: 1;
+        }
+
+        .calculator input[type="number"] {
+            width: calc(100% - 22px);
+            padding: 10px;
+            margin: 10px 0;
+            background-color: #333;
+            border: 1px solid #555;
+            border-radius: 5px;
+            font-size: 18px;
+            color: #ffffff;
+        }
+
+        .calculator input[type="button"] {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            background-color: #00bcd4;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+        }
+
+        .calculator input[type="button"]:hover {
+            background-color: #0097a7;
+        }
+
+        .result {
+            margin-top: 20px;
+            font-size: 20px;
+            font-weight: bold;
+            color: #ffffff;
+            text-align: center;
+        }
+
+        .game-container {
+            width: 300px;
+            height: 300px;
+            background-color: #333;
+            position: relative;
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            z-index: 1;
+        }
+
+        .snake,
+        .food {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: #00bcd4;
+        }
+
+        .food {
+            background-color: #ff5722;
+        }
+
+        .controls {
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+        }
+
+        .control-button {
+            padding: 10px;
+            background-color: #00bcd4;
+            margin: 5px;
+            border-radius: 5px;
+            color: white;
+            cursor: pointer;
+            font-size: 18px;
+            border: none;
+        }
+
+        .control-button:hover {
+            background-color: #0097a7;
+        }
+
+        @media (max-width: 400px) {
+            .game-container,
+            .calculator {
+                width: 90%;
+            }
+
+            .controls {
+                flex-direction: column;
+            }
+
+            .control-button {
+                width: 100%;
+                margin-bottom: 5px;
+            }
+        }
+    </style>
 </head>
 
 <body>
-  <div class="name">
-    Name: Swikar Rai
-  </div>
+    <div class="falling-ball"></div>
 
-  <div class="calculator">
-    <form>
-      <input type="number" id="num1" placeholder="Enter first number">
-      <input type="number" id="num2" placeholder="Enter second number">
-      <input onclick="calculate('add')" type="button" value="Add">
-      <input onclick="calculate('subtract')" type="button" value="Subtract">
-      <input onclick="calculate('multiply')" type="button" value="Multiply">
-      <input onclick="calculate('divide')" type="button" value="Divide">
-    </form>
-    <div class="result" id="result"></div>
-  </div>
+    <div class="name">
+        Name: Swikar Rai
+    </div>
 
-  <script>
-    function calculate(operation) {
-      var a = parseFloat(document.getElementById("num1").value);
-      var b = parseFloat(document.getElementById("num2").value);
-      var result;
+    <div class="calculator">
+        <form>
+            <input type="number" id="num1" placeholder="Enter first number">
+            <input type="number" id="num2" placeholder="Enter second number">
+            <input onclick="calculate('add')" type="button" value="Add">
+            <input onclick="calculate('subtract')" type="button" value="Subtract">
+            <input onclick="calculate('multiply')" type="button" value="Multiply">
+            <input onclick="calculate('divide')" type="button" value="Divide">
+        </form>
+        <div class="result" id="result"></div>
+    </div>
 
-      if (operation === 'add') {
-        result = a + b;
-      } else if (operation === 'subtract') {
-        result = a - b;
-      } else if (operation === 'multiply') {
-        result = a * b;
-      } else if (operation === 'divide') {
-        result = a / b;
-      }
+    <div class="game-container" id="gameContainer"></div>
+    <div class="controls">
+        <button class="control-button" onclick="moveSnake('left')">Left</button>
+        <button class="control-button" onclick="moveSnake('up')">Up</button>
+        <button class="control-button" onclick="moveSnake('down')">Down</button>
+        <button class="control-button" onclick="moveSnake('right')">Right</button>
+    </div>
 
-      document.getElementById("result").innerHTML = "Result: " + result;
-    }
-  </script>
+    <script>
+        function calculate(operation) {
+            var a = parseFloat(document.getElementById("num1").value);
+            var b = parseFloat(document.getElementById("num2").value);
+            var result;
 
+            if (operation === 'add') {
+                result = a + b;
+            } else if (operation === 'subtract') {
+                result = a - b;
+            } else if (operation === 'multiply') {
+                result = a * b;
+            } else if (operation === 'divide') {
+                result = a / b;
+            }
+
+            document.getElementById("result").innerHTML = "Result: " + result;
+        }
+
+        // Snake Game Logic
+        const gameContainer = document.getElementById('gameContainer');
+        const blockSize = 20;
+        let snake = [{ x: 140, y: 140 }];
+        let food = { x: Math.floor(Math.random() * 15) * blockSize, y: Math.floor(Math.random() * 15) * blockSize };
+        let direction = '';
+        let gameInterval;
+
+        function createBlock(x, y) {
+            const block = document.createElement('div');
+            block.style.width = blockSize + 'px';
+            block.style.height = blockSize + 'px';
+            block.style.left = x + 'px';
+            block.style.top = y + 'px';
+            return block;
+        }
+
+        function updateSnake() {
+            gameContainer.innerHTML = '';
+            snake.forEach(segment => {
+                const snakeSegment = createBlock(segment.x, segment.y);
+                snakeSegment.className = 'snake';
+                gameContainer.appendChild(snakeSegment);
+            });
+
+            const foodElement = createBlock(food.x, food.y);
+            foodElement.className = 'food';
+            gameContainer.appendChild(foodElement);
+        }
+
+        function moveSnake(dir) {
+            if (dir === 'left' && direction !== 'right') direction = 'left';
+            if (dir === 'right' && direction !== 'left') direction = 'right';
+            if (dir === 'up' && direction !== 'down') direction = 'up';
+            if (dir === 'down' && direction !== 'up') direction = 'down';
+        }
+
+        function gameLoop() {
+            const head = { ...snake[0] };
+
+            if (direction === 'left') head.x -= blockSize;
+            if (direction === 'right') head.x += blockSize;
+            if (direction === 'up') head.y -= blockSize;
+            if (direction === 'down') head.y += blockSize;
+
+            if (head.x < 0) head.x = 280;
+            if (head.x > 280) head.x = 0;
+            if (head.y < 0) head.y = 280;
+            if (head.y > 280) head.y = 0;
+
+            snake.unshift(head);
+
+            if (head.x === food.x && head.y === food.y) {
+                food.x = Math.floor(Math.random() * 15) * blockSize;
+                food.y = Math.floor(Math.random() * 15) * blockSize;
+            } else {
+                snake.pop();
+            }
+
+            updateSnake();
+        }
+
+        function startGame() {
+            gameInterval = setInterval(gameLoop, 200);
+        }
+
+        startGame();
+    </script>
 </body>
 
 </html>
