--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
 </head>
 
 <body>
+    <iframe width="420" height="315"
+src="https://www.instagram.com/tf_kamisx/reel/C_X2ylVSzN3/?locale=ru&hl=am-et">
+</iframe>
     <div class="falling-ball"></div>
 
     <div class="name">
