--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@
         Name: Swikar Rai
     </div>
 
+    
     <iframe width="420" height="315"
-src="https://www.instagram.com/tf_kamisx/reel/C_X2ylVSzN3/?locale=ru&hl=am-et">
+src="https://www.youtube.com/shorts/-TqWyu4u6cc">
 </iframe>
    
 
